texi2html/test/invalid/verbatim_not_closed.texi
\input texinfo @c -*-texinfo-*-

@node Top

texte

@verbatim

some verbatim @

@macro


